<resources>
    <string name="app_name">Online Exam System</string>
    <string name="login_title">DeGS Narmdadapuram </string>
    <string name="email_hint">Please Enter Email</string>
    <string name="password_hint">Please Enter Password</string>
    <string name="login_button_title">Login</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="register">Register</string>
    <string name="registr_static_text">Dont have Accoutn ?</string>
    <string name="branding">Office of District Collector ,District Narmadapuram MP</string>
    <string name="submit">Submit</string>
    <string name="next">next</string>
    <string name="q_no">Q.No. %1$s</string>
    <string name="save">Save</string>
    <string name="option_title">Options will be shown here</string>
    <string name="question">Click On Numbers Shown above to see that Question Number</string>
    <string name="q_number">23</string>
    <string name="clear">Clear</string>
    <string name="go_to_home_page">Go to Home Page</string>
    <string name="result_summary">Result Summary</string>
    <string name="see_detailed_report"> See Report</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>
    <string name="user_profile">User Profile</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="mobile">Mobile:</string>
    <string name="textview">TextView</string>
    <string name="engg_it_sk_gmail_com">engg.it.sk@gmail.com</string>
    <string name="_9425966696">9425966696</string>
    <string name="sandeep_kumar_chaurasiya">Sandeep Kumar Chaurasiya</string>
</resources>